# axum-htmx-test

./: .gitignore
backend/: .env  Cargo.toml
backend/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/templates/: index.html  mypage.html
